--- a/UniGraphics/ColorModels/ColorModelsView.xaml
+++ b/UniGraphics/ColorModels/ColorModelsView.xaml
@@ -11,32 +11,6 @@
     d:DesignWidth="900"
     Background="White"
     mc:Ignorable="d">
-    <Page.Resources>
-        <Style x:Key="BlueButtonStyle" TargetType="{x:Type Button}">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border>
-                            <Border.Style>
-                                <Style TargetType="{x:Type Border}">
-                                    <Setter Property="Background" Value="#99A2F1" />
-                                    <Style.Triggers>
-                                        <Trigger Property="IsMouseOver" Value="True">
-                                            <Setter Property="Background" Value="#8189cc" />
-                                        </Trigger>
-                                    </Style.Triggers>
-                                </Style>
-                            </Border.Style>
-                            <Grid Background="Transparent">
-                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                            </Grid>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <cnvrt:ScaleConverter x:Key="ScaleConverter" />
-    </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="25" />
@@ -45,10 +19,12 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="269" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition />
+            <ColumnDefinition Width="3"/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Menu
-            Grid.ColumnSpan="2"
+            Grid.ColumnSpan="4"
             Background="#99A2F1"
             Foreground="White">
             <MenuItem
@@ -87,6 +63,8 @@
                     Header="Кредити" />
             </MenuItem>
         </Menu>
+        <TextBlock Text="RGB" Foreground="White" FontSize="16" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+        <TextBlock Text="HSL" Foreground="White" FontSize="16" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
         <Border
             Grid.Row="1"
             Grid.RowSpan="2"
@@ -109,178 +87,36 @@
                     Grid.Column="0"
                     Width="191"
                     Height="36"
-                    Margin="10,77,10,0"
+                    Margin="10,49,10,0"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     HorizontalContentAlignment="Center"
-                    Content="Введіть коефіцієнти:"
+                    Content="Оберіть тон:"
                     FontSize="18"
                     Foreground="White" />
-                <Label
-                    Grid.Row="1"
-                    Grid.Column="0"
-                    Width="26"
-                    Height="30"
-                    Margin="6,110,237,0"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Top"
-                    Content="c:"
-                    FontSize="18"
-                    Foreground="White" />
-                <Label
-                    Grid.Row="1"
-                    Grid.Column="0"
-                    Width="26"
-                    Height="30"
-                    Margin="110,110,133,0"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Top"
-                    Content="+"
-                    FontSize="18"
-                    Foreground="White" />
-                <Label
-                    Grid.Row="1"
-                    Grid.Column="0"
-                    Width="26"
-                    Height="30"
-                    Margin="219,110,24,0"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Top"
-                    Content="i"
-                    FontSize="18"
-                    Foreground="White" />
-                <TextBox
-                    Name="ConstantRealText"
-                    Grid.Row="1"
-                    Grid.Column="0"
-                    Width="73"
-                    Height="22"
-                    Margin="32,118,0,0"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Top"
-                    HorizontalContentAlignment="Center"
-                    VerticalContentAlignment="Center"
-                    BorderThickness="0"
-                    FontSize="14"
-                    Foreground="#8787ed"
-                    SpellCheck.IsEnabled="True"
-                    TextWrapping="Wrap" />
-                <TextBox
-                    Name="ConstantImaginaryText"
-                    Grid.Row="1"
-                    Grid.Column="0"
-                    Width="73"
-                    Height="22"
-                    Margin="141,118,0,0"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Top"
-                    HorizontalContentAlignment="Center"
-                    VerticalContentAlignment="Center"
-                    BorderThickness="0"
-                    FontSize="14"
-                    Foreground="#8787ed"
-                    TextWrapping="Wrap" />
-                <Label
-                    Grid.Column="0"
-                    Width="26"
-                    Height="30"
-                    Margin="5,151,238,0"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Top"
-                    Content="k:"
-                    FontSize="18"
-                    Foreground="White" />
-                <RadioButton
-                    Name="FractalPower3Radio"
-                    Grid.Column="0"
-                    Width="12"
-                    Height="12"
-                    Margin="40,164,0,0"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Top"
-                    BorderThickness="0"
-                    IsChecked="True" />
-                <TextBlock
-                    Grid.Column="0"
-                    Margin="60,158,0,0"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Top"
-                    FontSize="16"
-                    Foreground="White"
-                    Text="3" />
-                <RadioButton
-                    Name="FractalPower4Radio"
-                    Grid.Column="0"
-                    Width="12"
-                    Height="12"
-                    Margin="80,164,0,0"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Top"
-                    BorderThickness="0" />
-                <TextBlock
-                    Grid.Column="0"
-                    Margin="100,158,0,0"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Top"
-                    FontSize="16"
-                    Foreground="White"
-                    Text="4" />
-                <Label
-                    Grid.Row="1"
-                    Grid.Column="0"
-                    Width="148"
-                    Height="36"
-                    Margin="5,246,116,0"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Top"
-                    Content="Колірна модель:"
-                    FontSize="18"
-                    Foreground="White" />
-                <Label
-                    Grid.Column="0"
-                    Width="81"
-                    Margin="0,214,10,327"
-                    HorizontalAlignment="Right"
-                    HorizontalContentAlignment="Center"
-                    Content="{Binding Path=FractalScale, Converter={StaticResource ScaleConverter}}"
-                    FontSize="18"
-                    Foreground="White" />
-                <ComboBox
-                    Grid.Row="1"
-                    Grid.Column="0"
-                    Width="101"
-                    Height="22"
-                    Margin="0,253,10,0"
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Top"
-                    Foreground="#8787ed">
-                    <TextBlock>Standard</TextBlock>
-                    <TextBlock>Gold</TextBlock>
-                    <TextBlock>Candy</TextBlock>
-                    <TextBlock>Zebra</TextBlock>
-                    <TextBlock>Black&amp;Red</TextBlock>
-                </ComboBox>
-                <Button
-                    Name="VisualizeButton"
-                    Grid.Row="1"
-                    Width="249"
-                    Height="40"
-                    Margin="0,290,0,0"
-                    VerticalAlignment="Top"
-                    BorderThickness="0"
-                    Content="Візуалізувати"
-                    Foreground="White"
-                    Style="{StaticResource BlueButtonStyle}" />
+                <Slider x:Name="lightnessSlider" Margin="31,167,39,380"/>
+                <Label Content="RGB:" Margin="39,218,180,329"/>
+                <Label Content="HSL:" Margin="39,250,180,289"/>
+                <Label Name="rgbLabel" Content="(255, 255, 255)" Margin="89,218,67,329"/>
+                <Label Name="hslLabel" Content="(120, 100%, 100%)" Margin="89,250,67,297"/>
+                <Border Name="selectedHue" BorderThickness="2" BorderBrush="#99A2F1" Height="27" Margin="219,105,23,443" Width="27"/>
             </Grid>
         </Border>
+        <Border Background="#BCC3FF" Grid.Column="2" Grid.Row="1" Grid.RowSpan="2"></Border>
         <Image
-            Name="fractalImg"
+            Name="colorModelsImageLeft"
             Grid.Row="1"
             Grid.RowSpan="2"
             Grid.Column="1"
             RenderOptions.BitmapScalingMode="NearestNeighbor"
-            Source="{Binding Path=Image}"
-            Stretch="Fill" />
+            Source="{Binding Path=Image}" />
+        <Image
+            Name="colorModelsImageRight"
+            Grid.Row="1"
+            Grid.RowSpan="2"
+            Grid.Column="3"
+            RenderOptions.BitmapScalingMode="NearestNeighbor"
+            Source="{Binding Path=Image}" />
         <Image
             Grid.Row="2"
             Width="118"
@@ -305,25 +141,5 @@
                 TextAlignment="Center"
                 TextWrapping="Wrap" />
         </Border>
-        <TextBlock
-            Grid.Row="1"
-            Grid.Column="0"
-            Width="249"
-            Height="24"
-            Margin="10,49,0,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Background="White"
-            FontSize="18"
-            Foreground="#8787ed"
-            TextAlignment="Center"
-            TextWrapping="Wrap">
-            <Run Text="f(z) = z" />
-            <Run
-                BaselineAlignment="Top"
-                FontSize="12"
-                Text="k" />
-            <Run Text="+ c" />
-        </TextBlock>
     </Grid>
 </Page>
