--- a/UniGraphics/ColorModels/ColorModelsView.xaml
+++ b/UniGraphics/ColorModels/ColorModelsView.xaml
@@ -35,11 +35,19 @@
                     Padding="-20,0,0,0"
                     Background="#F2F2F2"
                     Foreground="#99A2F1"
+                    Command="{Binding OpenFile}"
+                    Header="Відкрити" />
+                <MenuItem
+                    Padding="-20,0,0,0"
+                    Background="#F2F2F2"
+                    Foreground="#99A2F1"
+                    Command="{Binding SaveFile}"
                     Header="Зберегти як..." />
                 <MenuItem
                     Padding="-20,0,0,0"
                     Background="#F2F2F2"
                     Foreground="#99A2F1"
+                    Command="{Binding PerformExit}"
                     Header="Вийти" />
             </MenuItem>
             <MenuItem
@@ -94,29 +102,48 @@
                     Content="Оберіть тон:"
                     FontSize="18"
                     Foreground="White" />
-                <Slider x:Name="lightnessSlider" Margin="31,167,39,380"/>
-                <Label Content="RGB:" Margin="39,218,180,329"/>
-                <Label Content="HSL:" Margin="39,250,180,289"/>
-                <Label Name="rgbLabel" Content="(255, 255, 255)" Margin="89,218,67,329"/>
-                <Label Name="hslLabel" Content="(120, 100%, 100%)" Margin="89,250,67,297"/>
-                <Border Name="selectedHue" BorderThickness="2" BorderBrush="#99A2F1" Height="27" Margin="219,105,23,443" Width="27"/>
+                <Slider x:Name="lightnessSlider" Margin="31,167,39,0" VerticalAlignment="Top" Grid.Row="1"/>
+                <Label Content="RGB:" Margin="39,218,180,0" VerticalAlignment="Top" Grid.Row="1"/>
+                <Label Content="HSL:" Margin="39,250,180,0" VerticalAlignment="Top" Grid.Row="1"/>
+                <Label Name="rgbLabel" Content="{Binding RGBText}" Margin="89,218,67,0" VerticalAlignment="Top" Grid.Row="1"/>
+                <Label Name="hslLabel" Content="{Binding HSLText}" Margin="89,250,67,0" VerticalAlignment="Top" Grid.Row="1"/>
+                <Border 
+                    Name="selectedHue" 
+                    BorderThickness="2" 
+                    BorderBrush="#99A2F1" 
+                    Height="27" 
+                    Margin="203,90,39,0" 
+                    Width="27" 
+                    VerticalAlignment="Top"/>
             </Grid>
         </Border>
         <Border Background="#BCC3FF" Grid.Column="2" Grid.Row="1" Grid.RowSpan="2"></Border>
-        <Image
-            Name="colorModelsImageLeft"
+        <Grid
+            ClipToBounds="True"
             Grid.Row="1"
-            Grid.RowSpan="2"
             Grid.Column="1"
-            RenderOptions.BitmapScalingMode="NearestNeighbor"
-            Source="{Binding Path=Image}" />
-        <Image
-            Name="colorModelsImageRight"
+            Grid.RowSpan="2">
+            <Image
+                Margin="100, 0, 0, 0"
+                Name="colorModelsImageLeft"
+                Stretch="Uniform"
+                Width="{Binding Source.PixelWidth, RelativeSource={RelativeSource Self}}"
+                Height="{Binding Source.PixelHeight, RelativeSource={RelativeSource Self}}"
+                Source="{Binding Path=ImageLeft}"/>
+        </Grid>
+        <Grid
+            ClipToBounds="True"
             Grid.Row="1"
             Grid.RowSpan="2"
-            Grid.Column="3"
-            RenderOptions.BitmapScalingMode="NearestNeighbor"
-            Source="{Binding Path=Image}" />
+            Grid.Column="3">
+            <Image
+                Margin="100, 0, 0, 0"
+                Name="colorModelsImageRight"
+                Stretch="Uniform"
+                Width="{Binding Source.PixelWidth, RelativeSource={RelativeSource Self}}"
+                Height="{Binding Source.PixelHeight, RelativeSource={RelativeSource Self}}"
+                Source="{Binding Path=ImageRight}" />
+        </Grid>
         <Image
             Grid.Row="2"
             Width="118"
