--- a/UniGraphics/ColorModels/ColorModelsView.xaml
+++ b/UniGraphics/ColorModels/ColorModelsView.xaml
@@ -11,6 +11,21 @@
     d:DesignWidth="900"
     Background="White"
     mc:Ignorable="d">
+    <Page.Resources>
+        <Color x:Key="CurrentColor">#00FF00</Color>
+
+        <LinearGradientBrush x:Key="HueBrush" StartPoint="0,0" EndPoint="1,0">
+            <LinearGradientBrush.GradientStops>
+                <GradientStop Color="#FF0000" Offset="0" />
+                <GradientStop Color="#FFFF00" Offset="0.167" />
+                <GradientStop Color="#00FF00" Offset="0.333" />
+                <GradientStop Color="#00FFFF" Offset="0.5" />
+                <GradientStop Color="#0000FF" Offset="0.667" />
+                <GradientStop Color="#FF00FF" Offset="0.833" />
+                <GradientStop Color="#FF0000" Offset="1" />
+            </LinearGradientBrush.GradientStops>
+        </LinearGradientBrush>
+    </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="25" />
@@ -31,6 +46,11 @@
                 FontSize="16"
                 Foreground="White"
                 Header="Файл">
+                <MenuItem
+                    Padding="-20,0,0,0"
+                    Background="#F2F2F2"
+                    Foreground="#99A2F1"
+                    Header="Відкрити" />
                 <MenuItem
                     Padding="-20,0,0,0"
                     Background="#F2F2F2"
@@ -60,7 +80,7 @@
                     Padding="-20,0,0,0"
                     Background="#F2F2F2"
                     Foreground="#99A2F1"
-                    Header="Кредити" />
+                    Header="Про програму" />
             </MenuItem>
         </Menu>
         <TextBlock Text="RGB" Foreground="White" FontSize="16" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
@@ -72,10 +92,9 @@
             Background="#BCC3FF">
             <Grid>
                 <Label
-                    Grid.Row="1"
                     Grid.Column="0"
                     Height="49"
-                    Margin="10,0,10,0"
+                    Margin="51,10,39,0"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     HorizontalContentAlignment="Center"
@@ -83,23 +102,66 @@
                     FontSize="25"
                     Foreground="White" />
                 <Label
-                    Grid.Row="1"
                     Grid.Column="0"
                     Width="191"
                     Height="36"
-                    Margin="10,49,10,0"
+                    Margin="39,59,39,0"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     HorizontalContentAlignment="Center"
                     Content="Оберіть тон:"
                     FontSize="18"
                     Foreground="White" />
-                <Slider x:Name="lightnessSlider" Margin="31,167,39,380"/>
-                <Label Content="RGB:" Margin="39,218,180,329"/>
-                <Label Content="HSL:" Margin="39,250,180,289"/>
-                <Label Name="rgbLabel" Content="(255, 255, 255)" Margin="89,218,67,329"/>
-                <Label Name="hslLabel" Content="(120, 100%, 100%)" Margin="89,250,67,297"/>
-                <Border Name="selectedHue" BorderThickness="2" BorderBrush="#99A2F1" Height="27" Margin="219,105,23,443" Width="27"/>
+                <Slider x:Name="lightnessSlider" Margin="10,167,10,380">
+                </Slider>
+                <Label Content="RGB:" Margin="10,214,209,329" Foreground="White" FontSize="16"/>
+                <Label Content="HSL:" Margin="10,242,209,297" Foreground="White" FontSize="16"/>
+                <Label Name="rgbLabel" Content="(255, 255, 255)" Margin="60,214,96,333" Foreground="White" FontSize="16"/>
+                <Label Name="hslLabel" Content="(120, 100%, 100%)" Margin="60,242,67,297" Foreground="White" FontSize="16"/>
+                <Label
+                    Grid.Column="0"
+                    Width="191"
+                    Height="36"
+                    Margin="39,136,39,0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top"
+                    HorizontalContentAlignment="Center"
+                    Content="Змініть яскравість:"
+                    FontSize="18"
+                    Foreground="White" />
+                <Label
+                    Grid.Column="0"
+                    Width="31"
+                    Height="31"
+                    Margin="120,182,118,0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top"
+                    HorizontalContentAlignment="Center"
+                    Content="0"
+                    FontSize="16"
+                    Foreground="White" />
+                <Label
+                    Grid.Column="0"
+                    Width="31"
+                    Height="31"
+                    Margin="228,182,10,0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top"
+                    HorizontalContentAlignment="Center"
+                    Content="+"
+                    FontSize="16"
+                    Foreground="White" />
+                <Label
+                    Grid.Column="0"
+                    Width="31"
+                    Height="31"
+                    Margin="10,182,228,0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top"
+                    HorizontalContentAlignment="Center"
+                    Content="-"
+                    FontSize="16"
+                    Foreground="White" />
             </Grid>
         </Border>
         <Border Background="#BCC3FF" Grid.Column="2" Grid.Row="1" Grid.RowSpan="2"></Border>
@@ -141,5 +203,7 @@
                 TextAlignment="Center"
                 TextWrapping="Wrap" />
         </Border>
+        <Rectangle Fill="{StaticResource HueBrush}" HorizontalAlignment="Left" Width="210" Height="27" Margin="10,99,0,0" Grid.Row="1" VerticalAlignment="Top" Stroke =" #99A2F1" SnapsToDevicePixels="True"/>
+        <Rectangle Fill="LightGreen" HorizontalAlignment="Left" Width="27" Height="27" Margin="232,99,0,0" Grid.Row="1" VerticalAlignment="Top" Stroke =" #99A2F1" SnapsToDevicePixels="True"/>
     </Grid>
 </Page>
