--- a/UniGraphics/Fractals/FractalsView.xaml
+++ b/UniGraphics/Fractals/FractalsView.xaml
@@ -478,7 +478,7 @@
                     Padding="-20,0,0,0"
                     Background="#F2F2F2"
                     Foreground="#99A2F1"
-                    Header="Кредити" />
+                    Header="Про програму" />
             </MenuItem>
         </Menu>
         <Border
