--- a/UniGraphics/ColorModels/ColorModelsView.xaml
+++ b/UniGraphics/ColorModels/ColorModelsView.xaml
@@ -73,6 +73,7 @@
                     Padding="-20,0,0,0"
                     Background="#F2F2F2"
                     Foreground="#99A2F1"
+                    Click="HelpClicked"
                     Header="Довідка" />
                 <MenuItem
                     Padding="-20,0,0,0"
@@ -115,7 +116,7 @@
                     Content="Оберіть тон:"
                     FontSize="18"
                     Foreground="White" />
-				<Slider 
+                <Slider 
                     x:Name="lightnessSlider" 
                     Margin="31,167,39,0" 
                     VerticalAlignment="Top" 
@@ -125,10 +126,12 @@
                     LargeChange="10"
                     Maximum="100"
                     IsMoveToPointEnabled="True" 
-					Minimum="-100"/>				<Label Visibility="{Binding RGBValuesVisibility}" Content="RGB:" Margin="10,214,209,329" VerticalAlignment="Top" Grid.Row="1" Foreground="White" FontSize="16"/>
+					Minimum="-100"/>
+                <Label Visibility="{Binding RGBValuesVisibility}" Content="RGB:" Margin="10,214,209,329" VerticalAlignment="Top" Grid.Row="1" Foreground="White" FontSize="16"/>
                 <Label Visibility="{Binding HSLValuesVisibility}" Content="HSL:" Margin="10,242,209,297" VerticalAlignment="Top" Grid.Row="1" Foreground="White" FontSize="16"/>
                 <Label Visibility="{Binding RGBValuesVisibility}" Name="rgbLabel" Content="{Binding RGBText}" Margin="60,214,96,333" VerticalAlignment="Top" Grid.Row="1" Foreground="White" FontSize="16"/>
-                <Label Visibility="{Binding HSLValuesVisibility}" Name="hslLabel" Content="{Binding HSLText}" Margin="60,242,67,297" VerticalAlignment="Top" Grid.Row="1" Foreground="White" FontSize="16"/>				<Label
+                <Label Visibility="{Binding HSLValuesVisibility}" Name="hslLabel" Content="{Binding HSLText}" Margin="60,242,67,297" VerticalAlignment="Top" Grid.Row="1" Foreground="White" FontSize="16"/>
+                <Label
                     Grid.Column="0"
                     Width="191"
                     Height="36"
@@ -139,39 +142,37 @@
                     Content="Змініть яскравість:"
                     FontSize="18"
                     Foreground="White" />
-
-
                 <Label
                     Grid.Column="0"
-                    Width="31"
+                    Width="75"
                     Height="31"
-                    Margin="120,182,118,0"
+                    Margin="0,182,0,0"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     HorizontalContentAlignment="Center"
-                    Content="0"
+                    Content="{Binding Lightness}"
                     FontSize="16"
                     Foreground="White" />
                 <Label
                     Grid.Column="0"
-                    Width="31"
+                    Width="60"
                     Height="31"
-                    Margin="228,182,10,0"
+                    Margin="199,182,10,0"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     HorizontalContentAlignment="Center"
-                    Content="+"
+                    Content="+100%"
                     FontSize="16"
                     Foreground="White" />
                 <Label
                     Grid.Column="0"
-                    Width="31"
+                    Width="60"
                     Height="31"
-                    Margin="10,182,228,0"
+                    Margin="10,182,199,0"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     HorizontalContentAlignment="Center"
-                    Content="-"
+                    Content="-100%"
                     FontSize="16"
                     Foreground="White" />
             </Grid>
@@ -232,7 +233,25 @@
                 TextAlignment="Center"
                 TextWrapping="Wrap" />
         </Border>
-        <Rectangle Fill="{StaticResource HueBrush}" HorizontalAlignment="Left" Width="210" Height="27" Margin="10,99,0,0" Grid.Row="1" VerticalAlignment="Top" Stroke =" #99A2F1" SnapsToDevicePixels="True"/>
-        <Rectangle Fill="LightGreen" HorizontalAlignment="Left" Width="27" Height="27" Margin="232,99,0,0" Grid.Row="1" VerticalAlignment="Top" Stroke =" #99A2F1" SnapsToDevicePixels="True"/>
+        <Rectangle 
+            Fill="{StaticResource HueBrush}" 
+            HorizontalAlignment="Left"
+            Width="210" 
+            Height="27" 
+            Margin="10,99,0,0" 
+            Grid.Row="1" 
+            VerticalAlignment="Top" 
+            Stroke =" #99A2F1" 
+            SnapsToDevicePixels="True"/>
+        <Rectangle 
+            Fill="LightGreen" 
+            HorizontalAlignment="Left" 
+            Width="27" 
+            Height="27" 
+            Margin="232,99,0,0" 
+            Grid.Row="1"
+            VerticalAlignment="Top"
+            Stroke =" #99A2F1" 
+            SnapsToDevicePixels="True"/>
     </Grid>
 </Page>
