--- a/UniGraphics/HelpWindow.xaml
+++ b/UniGraphics/HelpWindow.xaml
@@ -6,10 +6,12 @@
         xmlns:local="clr-namespace:UniGraphics"
         mc:Ignorable="d"
         Icon="/UniGraphics;component/Resources/Unicorn/logo.png"
-        Title="Help" Height="450" Width="800">
-    
+        Title="Довідка" Height="450" Width="800">
     <Grid>
         <Frame
-            Name="HelpFrame"/>
+            NavigationUIVisibility="Hidden"
+            Source="Help/FractalsHelp.xaml"
+            Name="HelpFrame" 
+            Margin="169,82,69,63"/>
     </Grid>
 </Window>
